generator client {
  provider        = "prisma-client"
  output          = "../src/generated/prisma"
  previewFeatures = ["nativeDistinct", "relationJoins"]
  engineType      = "client"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
  schemas  = ["schiff"]
}

model Kiste {
  id        Int     @id @default(autoincrement())
  hoehe     Decimal @db.Decimal(5, 2)
  laenge    Decimal @db.Decimal(5, 2)
  breite    Decimal @db.Decimal(5, 2)
  schiffId  Int     @map("schiff_id")
  schiff    Schiff  @relation(fields: [schiffId], references: [id], onDelete: Cascade, onUpdate: NoAction)

  @@schema("schiff")
  @@map("kiste")
}

model Offizier {
  id        Int    @id @default(autoincrement())
  name      String
  alter     Int
  schiffId  Int    @map("schiff_id") @unique
  schiff    Schiff @relation(fields: [schiffId], references: [id], onDelete: Cascade, onUpdate: NoAction)

  @@schema("schiff")
  @@map("offizier")
}

model Schiff {
  id           Int       @id @default(autoincrement())
  version      Int       @default(0)
  name         String
  laenge       Decimal   @db.Decimal(5, 2)
  erzeugt      DateTime  @default(now()) @db.Timestamp(6)
  aktualisiert DateTime  @default(now()) @db.Timestamp(6) @updatedAt
  kisten       Kiste[]
  offizier     Offizier?

  @@schema("schiff")
  @@map("schiff")
}
